frontend/src/components/header/header.css
.header {
  list-style: none;
  position: fixed;
  top: 0;
}

.nav_above_design {
  background: black;
  color: green;
  padding: 15px;
}

.social_icon_position {
  padding: 10px;
  color: lightgreen;
}
.social_icon_position:hover {
  color: #fff;
  text-decoration: none;
}

.logo_design {
  height: 60px;
  border-radius: 50%;
  margin-top: -20px;
}
.nav_design {
  padding: 15px;
  background-color: white;
  width: 100%;
}
.menu_style {
  background-color: white !important;
}
.menu_style:hover {
  color: green !important;
}

.allMenu {
  display: flex;
  justify-content: flex-end;
}

@media only screen and (max-width: 480px) {
  .allMenu {
    justify-content: left;
  }

  .socialIconMob {
    margin-top: -5%;
  }
}

